karte.html ergaenzt

--- a/karte.html
+++ b/karte.html
@@ -32,6 +32,7 @@
     const oms = new OverlappingMarkerSpiderfier(map);
     const gwInfo = {};
     const nodeFiles = [
+      "data/lsn50v2_owschlag.json",
       "data/sn50v3_neumuenstertl.json",
       "data/llms01_schachtaudorf.json",
       "data/s31lb_schachtaudorf.json",
